Fix options menu behind tabs #16

--- a/plugin/resources/assets/sass/popup/components/header.scss
+++ b/plugin/resources/assets/sass/popup/components/header.scss
@@ -162,7 +162,7 @@
 .options-menu {
   position: absolute;
   display: none;
-  z-index: 5;
+  z-index: 6;
   margin-left: -190px;
   margin-top: -10px;
   background-color: #fff;
